# mfamt_db_dump

./: .copier-answers.yml  .gitignore  pat.csv  person.csv  pyproject.toml  records
mfamt_db_dump/: mfamt_db_dump.py  person.py
tests/: test_mfamt_db_dump.py  test_person.py
